[project]
name = "diffusion_transformer_fmnist"
version = "0.1.0"
description = "Diffusion Transformer for conditional image generation on Fashion MNIST"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[project.scripts]
train = "diffusion_transformer_fmnist.train:main"
generate = "diffusion_transformer_fmnist.generate:main"
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
